--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>HTML Images</title>
   </head>
   <body>
+    <img src="https://s3.amazonaws.com/ironboa
+    rd-learn/lion.jpg"/>
+    <img src="https://s3.amazonaws.com/ironboa
+    rd-learn/lion.jpg" alt=lion/>
+    <img src="https://s3.amazonaws.com/ironboa
+    rd-learn/lion.jpg" alt="lion" title="cool"/>
     <!-- Your code here -->
   </body>
 </html>
